Text overflow for guess page fixed

--- a/src/app/pages/sentence-guess/sentence-guess.page.scss
+++ b/src/app/pages/sentence-guess/sentence-guess.page.scss
@@ -1,4 +1,5 @@
 #toolbar {
+    height: 45px;
     --background: none;
 
     :first-child {
@@ -18,10 +19,10 @@
 }
 
 #sentence-content {
+    max-height: calc(100vh - 40vmin - 45px);
+    overflow: auto;
     font-size: 2em;
-    --padding-top: 4vh;
-    --padding-start: 5vw;
-    --padding-end: 5vw;
+    padding: 2vh 5vw 0 5vw;
 }
 
 #canvas-div {
